# SuffixArrayInducedSorting

./: .gitignore  CMakeLists.txt  SuffixArray.h  SuffixArrayTest.cpp  generate_testing_data.py  patterns100.txt  patterns200.txt  patterns300.txt  patterns400.txt  patterns500.txt  searches_comparison.xlsx  string1000.txt  string10000.txt  string100000.txt  string1000000.txt  string5000.txt  string50000.txt  string500000.txt  suffixArray.cpp
data/: patterns10.txt  patterns100.txt  patterns1000.txt  patterns10000.txt  string1000000.txt  string2500000.txt
src/: StandardInput.cpp  SuffixArray.h  suffixArray.cpp
tests/: BasicTests.cpp  BruteForce.cpp  BruteForce.h  TimeTests.cpp
